--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -b deploy -d build"
   },
   "eslintConfig": {
     "extends": [
